--- a/_config.yml
+++ b/_config.yml
@@ -68,3 +68,6 @@ kramdown:
   hard_wrap         : false
   footnote_nr       : 1
   show_warnings     : false
+
+  #themes
+  theme             : Midnight
