--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 source              : .
-destination         : ./_site
+destination         : ./_site/main
 collections_dir     : .
 plugins_dir         : _plugins # takes an array of strings and loads plugins in that order
 layouts_dir         : _layouts
