--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ liquid:
 
 # Markdown Processors
 kramdown:
-  auto_ids          : true
+  auto_ids          : false
   entity_output     : as_char
   toc_levels        : [1, 2, 3, 4, 5, 6]
   smart_quotes      : lsquo,rsquo,ldquo,rdquo
