--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ collections:
     output          : true
 
 # Handling Reading
-safe                : false
+safe                : true
 include             : [".htaccess"]
 exclude             : ["Gemfile", "Gemfile.lock", "node_modules", "vendor/bundle/", "vendor/cache/", "vendor/gems/", "vendor/ruby/"]
 keep_files          : [".git", ".svn"]
@@ -60,7 +60,7 @@ liquid:
 
 # Markdown Processors
 kramdown:
-  auto_ids          : false
+  auto_ids          : true
   entity_output     : as_char
   toc_levels        : [1, 2, 3, 4, 5, 6]
   smart_quotes      : lsquo,rsquo,ldquo,rdquo
